# plant-controller

./: .gitignore
pt/controller_1/: config.py  controller-1.py  store.py
pt/controller_1/config/: config.yaml.template
pt/controller_1/sensors/: environment.py  moisture.py
pt/controller_3/: README.md  pyproject.toml  requirements.txt
pt/controller_3/impl/: config_example.toml
pt/controller_3/impl/plants/: plant1.json  plant1.json.example  plant2.json  plant3.json
pt/controller_3/impl/pump_schedules/: plant1.json  plant1.json.example  plant2.json  plant3.json
pt/controller_3/src/plant_controller/: __init__.py  __main__.py  com_bus.py  database.py  datapoint.py  greenhouse.py  modbus_bus.py  plant.py  sensor.py  setup_actions.py  unit.py  web_api.py
pt/controller_3/src/plant_controller/plant_sensor_drivers/: dummy_stemma.py
pt/controller_3/src/plant_controller/pump_schedules/: __init__.py  daily.py
pt/controller_3/src/plant_controller/pumps/: __init__.py  ad20p_1230e.py  cs_io404.py
pt/controller_3/src/plant_controller/sensors/: __init__.py  as7341.py  dfrobot_soil_sensor.py  dummy_stemma.py  sht45.py  stemma.py
pt/controller_3/test/: unit_tests.py
